k8s/production/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbm-backend-svc
  namespace: production
spec:
  selector:
    app: mbm-backend
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
