k8s/production/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbm-frontend-svc
  namespace: production
spec:
  selector:
    app: mbm-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
